feat: add parquet dw context and preview dashboard

--- a/config.ini
+++ b/config.ini
@@ -22,3 +22,8 @@ PORT=5432
 BASE=dwbra
 USER=dwbra-user
 PASS=Hc9iQoOs4xX7mxWeYYzzhA
+
+; Parquet DW
+[FULLDW]
+DBMS=parquet
+DATADIR=../dw-bra/data/dw/
