--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -23,7 +23,7 @@ jobs:
         script: |
           GIT_REPO=git@github.com:andrespp/dash-bra.git
           GIT_BRANCH=test
-          APP_PATH=~/dash-dwbra
+          APP_PATH=~/dash-br
           CONDA_ENV=dash-dwbra
 
           echo `date` >> /tmp/lastrun
@@ -39,7 +39,7 @@ jobs:
           # Clone repo
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
-          git clone $GIT_REPO
+          git clone $GIT_REPO $APP_PATH
           cd $APP_PATH
           git checkout $GIT_BRANCH
 
