--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -17,6 +17,7 @@ jobs:
         username: ${{ secrets.PROD_HOST_USERNAME }}
         key: ${{ secrets.PROD_HOST_KEY}}
         port: ${{ secrets.PROD_HOST_PORT }}
+        command_timeout: 120m
         shell: bash -l {0}
         script: |
           GIT_REPO=git@github.com:andrespp/dash-bra.git
