Bugfix: update src before building docker image

--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -44,6 +44,9 @@ jobs:
           cd $APP_PATH
           docker compose down
 
+          # Update GIT repo
+          git pull origin $GIT_BRANCH
+
           # Build docker image
           make setup
 
