--- a/config.ini
+++ b/config.ini
@@ -2,8 +2,8 @@
 
 ; Site Settings
 [SITE]
-TITLE=..:: DW-BRA ::..
-HEADER=DW-BRA
+TITLE=..:: DW-BR ::..
+HEADER=DW-BR
 AUTH=False
 LOG=True
 DEBUG=True
@@ -20,12 +20,12 @@ DATASETS=assets/datasets.json
 
 ; Data Warehouse
 [DW]
-NAME=DW-BRA
+NAME=DW-BR
 DBMS=postgres
 HOST=172.17.0.1
 PORT=5432
-BASE=dwbra
-USER=dwbra-user
+BASE=dwbr
+USER=dwbr-user
 PASS=Hc9iQoOs4xX7mxWeYYzzhA
 
 ; Parquet DW
